@@ -1,3 +1,0 @@
-DIST ipykernel-4.0.3.tar.gz 72024 SHA256 a4d7d2d35a0af432c8391872cb4dae727d77031212f32ca858b5c84cd0ea821f SHA512 ebd0fe26f840adeaf50b7c30a9658de6cda3c03411bf693e2195481c734b9d96606e5744fa65c309845eb127fe88c3216bd12f441e577ffc42646673cfc68a83 WHIRLPOOL b4a8de808d866e3e5a450d342e76e961ad33bfbd6e5034315244d342992904f9204f6bb711bc1c8d31ea36b9682e606aa70446122857166c97b486a90df123ee
-DIST ipykernel-4.1.1.tar.gz 80461 SHA256 d8c5555386d0f18f1336dea9800f9f0fe96dcecc9757c0f980e11fdfadb661ff SHA512 1ffd6f566ed75a9558eaa772c2572e427332204b32b8020aa9a6845d76d8a42847fc8e18d19f4cd840a069d51f91b01c3fe6e6ad2e4e127a4fe2aef2725a3866 WHIRLPOOL 64373a9af6f50e970273238cda2abcbeea12fdda51d33df95dcd9ad788e9f0f5682eed0c7cb77f35858005e748e1177715cdaac2797ef052d1f761a171014bbc
-DIST ipykernel-4.2.0.tar.gz 80543 SHA256 723b3d4baac20f0c9cd91fc75c3e813636ecb6c6e303fb34d628c3df078985a7 SHA512 32d3d3e594031c16b3ae4736f72e168263d44be15e1a546b4f69614bef30d80ff44db00699be086897c1c384b71600f3cd7bd702b45136f51aab526c2c018f25 WHIRLPOOL e1f335dd68068e338998ac7198db43cee6d06ce19f6f6a40c7da5509beb16fed24b86eb89dcab468fc344d8d4fd090963f74f46aa119013591abf4d3463bccfa
